2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt:
	* clutter.types:
	* clutter-docs.sgml: Add ClutterBox and subclasses. Rework
	the layout of the API reference, now that we have fairly more
	classes.

2007-06-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Add ClutterTimeoutPool API.

2007-06-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* tmpl/*.sgml: Remove from revision control the templates:
	everything is now documented from within the source code.

	* clutter-sections.txt: Add missing titles.

2007-06-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.types:
	* clutter-sections.txt:
	* clutter-docs.sgml: Add ClutterLayout API.

2007-06-07  Emmanuele Bassi  <ebassi@o-hand.com>

	* clutter-sections.txt: Add new ClutterTimeline API.

2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter-sections.txt:
	* tmpl/clutter-entry.sgml:
	updated for new functions.

2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter-sections.txt:
	* tmpl/clutter-entry.sgml:
	Added new functions.

2007-06-01  Neil J. Patel  <njp@o-hand.com>
	* clutter.types:
	* tmpl/clutter-entry.sgml:
	Updated for new signals/properties.

2007-06-01  Neil J. Patel  <njp@o-hand.com>

	* clutter-sections.txt:
	* tmpl/clutter-entry.sgml:
	Updated for new functions.

2007-06-01  Tomas Frydrych  <tf@openedhand.com>

	* tmpl/clutter-alpha.sgml:
	* tmpl/clutter-fixed.sgml:
	* tmpl/clutter-units.sgml:
	* tmpl/clutter-behaviour-rotate.sgml:
	* tmpl/clutter-behaviour-bspline.sgml:
	* tmpl/clutter-behaviour-ellipse.sgml:
	Updated templates.
	
2007-05-31  Neil J Patel  <njp@o-hand.com>

	* clutter-docs.sgml:
	* clutter-sections.txt:
	* tmpl/clutter-entry.sgml:
	Added ClutterEntry

2007-05-31  Tomas Frydrych  <tf@openedhand.com>

	* tmpl/clutter-behaviour-ellipse.sgml:
	Updated template.
	
2007-05-31  Tomas Frydrych  <tf@openedhand.com>

	* clutter.types:
	Added clutter_vertices_get_type.
	
2007-05-30  Tomas Frydrych  <tf@openedhand.com>
