@@ -1,3 +1,12 @@
+2007-06-16  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* subclassing-ClutterActor.sgml: Add a chapter about how to
+	correctly subclass the actor base class.
+
+	* clutter-docs.sgml: Include the new chapter about subclassing
+	ClutterActor; add a description for some of the API reference
+	parts.
+
 2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* clutter-sections.txt:
